[package]
name = "gaunter"
version = "0.2.0"
edition = "2024"
description = "Hidden Service Reverse Proxy & Web Application Firewall"
repository = "https://git.mrmave.work/maverick/gaunter"
license = "AGPL-3.0-only"
keywords = ["tor", "i2p", "waf", "reverse-proxy", "captcha", "hidden-service"]
categories = ["network-programming", "web-programming::http-server"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[features]
default = []
fuzzing = []
testing = []

[lib]
name = "gaunter"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["testing"]

[dependencies]
ab_glyph = { version = "0.2.32", default-features = false, features = ["std"] }
aho-corasick = { version = "1.1.4", default-features = false, features = ["std", "perf-literal"] }
async-compression = { version = "0.4.41", features = ["tokio", "gzip", "brotli"] }
async-trait = "0.1.89"
async_chunked_transfer = "1.4.0"
base64 = { version = "0.22.1", default-features = false, features = ["std", "alloc"] }
bytes = { version = "1.11.1", default-features = false, features = ["std"] }
chacha20poly1305 = "0.10.1"

dotenvy = "0.15.7"
httparse = { version = "1.10.1", default-features = false, features = ["std"] }

image = { version = "0.25.10", default-features = false, features = ["webp", "png", "jpeg"] }
imageproc = { version = "0.26.1", default-features = false, features = ["text"] }
libinjectionrs = "0.1.1"
papaya = "0.2.3"
path-clean = "1.0.1"
percent-encoding = "2.3.2"
pingora = { version = "0.8.0", features = ["proxy"] }
pingora-limits = "0.8.0"
proxy-header = "0.1.2"
rand = "0.10.0"
regex = { version = "1.12.3", default-features = false, features = ["std", "perf", "unicode-perl", "unicode-case"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
sha2 = "0.11.0"
socket2 = "0.6.3"
stem-rs = "1.2.3"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "json", "fmt", "ansi"] }
url = { version = "2.5.8", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
