[package]
name = "gaunter-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.gaunter]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "waf_engine"
path = "fuzz_targets/waf_engine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "proxy_protocol"
path = "fuzz_targets/proxy_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "session_security"
path = "fuzz_targets/session_security.rs"
test = false
doc = false
bench = false

[[bin]]
name = "form_captcha"
path = "fuzz_targets/form_captcha.rs"
test = false
doc = false
bench = false

[[bin]]
name = "waf_rule_engine"
path = "fuzz_targets/waf_rule_engine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "detect_mime"
path = "fuzz_targets/detect_mime.rs"
test = false
doc = false
bench = false
